--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,9 @@
 set -g prefix C-q
-
 unbind C-b
 
 set -sg escape-time 1
 
-# bind r source-file
+bind-key r source-file ~/.tmux.conf\; display-message "[tmux] ~/.tmux.conf reloaded!"
 
 bind | split-window -h
 bind - split-window -v
