Add powerline etc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g prefix C-q
 unbind C-b
+bind-key C-q send-prefix
 
 set -sg escape-time 1
 
@@ -39,7 +40,13 @@ set -g status-position top
 
 setw -g mode-keys vi
 
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+
+set -g history-limit 10000
+
+# powerline
+run-shell "powerline-daemon -q"
+source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
