Add tmux plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,9 +32,9 @@ set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
 
 set -g status-interval 60
 set -g status-justify centre
-setw -g monitor-activity on
+setw -g monitor-activity off
 
-set -g visual-activity on
+set -g visual-activity off
 
 set -g status-position top
 
@@ -47,6 +47,18 @@ set -g history-limit 10000
 
 # powerline
 run-shell "powerline-daemon -q"
-source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
+
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'arcticicestudio/nord-tmux'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-copycat'
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+ 
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
