--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,15 @@
 [core]
-	editor = vim
+    editor = vim
 [user]
-	email = tm.tomatoes@gmail.com
-        name = natsukium
+    email = tm.tomatoes@gmail.com
+    name = natsukium
 [color]
-	status = auto
-	diff = auto
-	branch = auto
-	interactive = auto
-	grep = auto
+    status = auto
+    diff = auto
+    branch = auto
+    interactive = auto
+    grep = auto
 [alias]
-	st = status
-	ci = commit
+    st = status
+    ci = commit
+    co = checkout
