--- a/xdg_config_home/tmux/tmux.conf
+++ b/xdg_config_home/tmux/tmux.conf
@@ -59,6 +59,11 @@ set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+
+if "test ! -d $XDG_DATA_HOME/tmux/plugins/tpm" \
+   "run 'git clone https://github.com/tmux-plugins/tpm $XDG_DATA_HOME/tmux/plugins/tpm && $XDG_DATA_HOME/tmux/plugins/tpm/bin/install_plugins'"
+
+set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
  
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run '$XDG_DATA_HOME/tmux/plugins/tpm/tpm'
