--- a/xdg_config_home/tmux/tmux.conf
+++ b/xdg_config_home/tmux/tmux.conf
@@ -4,7 +4,7 @@ bind-key C-q send-prefix
 
 set -sg escape-time 1
 
-bind-key r source-file ~/.tmux.conf\; display-message "[tmux] ~/.tmux.conf reloaded!"
+bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf\; display-message "[tmux] $XDG_CONFIG_HOME/tmux/tmux.conf reloaded!"
 
 bind | split-window -h
 bind - split-window -v
@@ -45,9 +45,6 @@ bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 
 set -g history-limit 10000
 
-# powerline
-#run-shell "powerline-daemon -q"
-#source "/usr/local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf"
 set-option -g default-terminal screen-256color
 set -g terminal-overrides 'xterm:colors=256'
 
