--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,10 @@
 name: setup test
 
 on:
-- pull_request:
+  pull_request:
     branches:
       - master
-- push:
+  push:
     branches:
       - master
 
