--- a/xdg_config_home/alacritty/alacritty.yml
+++ b/xdg_config_home/alacritty/alacritty.yml
@@ -52,7 +52,7 @@ window:
   decorations: none
 
   # When true, alacritty starts maximized.
-  start_maximized: false
+  # startup_mode: false
 
 scrolling:
   # Maximum number of lines in the scrollback buffer.
@@ -155,10 +155,10 @@ font:
   use_thin_strokes: true
 
 # Display the time it takes to redraw each frame.
-render_timer: false
+debug.render_timer: false
 
 # Keep the log file after quitting Alacritty.
-persistent_logging: false
+debug.persistent_logging: false
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
