--- a/xdg_config_home/tmux/tmux.conf
+++ b/xdg_config_home/tmux/tmux.conf
@@ -2,65 +2,27 @@ set -g prefix C-q
 unbind C-b
 bind-key C-q send-prefix
 
-set -sg escape-time 1
-
 bind-key r source-file $XDG_CONFIG_HOME/tmux/tmux.conf\; display-message "[tmux] $XDG_CONFIG_HOME/tmux/tmux.conf reloaded!"
 
-bind | split-window -h
-bind - split-window -v
-
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
-bind -r C-h select-window -t :-
-bind -r C-l select-window -t :+
-
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
-
 setw -g mouse on
-
-set -g status-fg white
-set -g status-bg black
-
-set -g status-left-length 40
-set -g status-left "#[fg=green]Session: #S #[fg=yellow]#I #[fg=cyan]#P"
-set -g status-right "#[fg=cyan][%Y-%m-%d(%a) %H:%M]"
-
-set -g status-interval 60
-set -g status-justify centre
-setw -g monitor-activity off
-
-set -g visual-activity off
-
 set -g status-position top
-
 setw -g mode-keys vi
-
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-bind-key p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-
-set -g history-limit 10000
-
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
 
 # Tmux Plugin Manager
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'arcticicestudio/nord-tmux'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
 set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 if "test ! -d $XDG_DATA_HOME/tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm $XDG_DATA_HOME/tmux/plugins/tpm && $XDG_DATA_HOME/tmux/plugins/tpm/bin/install_plugins'"
 
 set-environment -g TMUX_PLUGIN_MANAGER_PATH "$XDG_DATA_HOME/tmux/plugins"
- 
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '$XDG_DATA_HOME/tmux/plugins/tpm/tpm'
