--- a/xdg_config_home/git/config
+++ b/xdg_config_home/git/config
@@ -1,7 +1,7 @@
 [core]
     editor = vim
 [user]
-    email = tm.tomatoes@gmail.com
+    email = tomoya.otabi@gmail.com
     name = natsukium
 [color]
     status = auto
