ci: add configurations for github actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,4 +28,4 @@ jobs:
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: setup
         run: |
-          sh -c "$(curl -fsSL git.io/dotnatsukium)" CI
+          sh -c "$(cat bin/install.sh)" CI
