ci: fix `error: Directory /run does not exist, aborting activation`

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,11 @@ jobs:
           name: natsukium
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Create /run for darwin
+        if: matrix.os == 'macOS-latest'
+        run: |
+          printf "run\tprivate/var/run\n" | sudo tee -a /etc/synthetic.conf
+          /System/Library/Filesystems/apfs.fs/Contents/Resources/apfs.util -t || true
       - name: setup
         run: |
           sh -c "$(cat bin/install.sh)" CI
