ci: add auto update settings

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,10 @@ jobs:
           name: natsukium
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+      - name: Update flake
+        if: ${{ github.event_name == 'schedule' }}
+        run: |
+          nix flake update
       - name: Create /run for darwin
         if: matrix.os == 'macOS-latest'
         run: |
@@ -37,3 +41,9 @@ jobs:
       - name: setup
         run: |
           sh -c "$(cat bin/install.sh)" CI
+      - name: Push updated flake.lock
+        if: ${{ github.event_name == 'schedule' && matrix.os == 'macOS-latest' && success()}}
+        run: |
+          git add .
+          git commit -m "chore(flake.lock): update"
+          git push
