fix(ci): commit without gpg sign

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,5 +45,5 @@ jobs:
         if: ${{ github.event_name == 'schedule' && matrix.os == 'macOS-latest' && success()}}
         run: |
           git add .
-          git commit -m "chore(flake.lock): update"
+          git commit --no-gpg-sign -m "chore(flake.lock): update by GitHub Actions"
           git push
