ci: fix renovate settings

--- a/renovate.json5
+++ b/renovate.json5
@@ -4,7 +4,7 @@
 	"timezone": "Asia/Tokyo",
 	"lockFileMaintenance": {
 		"enabled": true,
-		"extends": ["schedule:before 5:00am"]
+		"schedule": ["before 5:00am"]
 	},
 	"automerge": true,
 	"automergeStrategy": "rebase",
