chore(starship): fix icon

--- a/nix/starship/starship.toml
+++ b/nix/starship/starship.toml
@@ -59,8 +59,8 @@ $line_break\
 $character"""
 
 [shell]
-fish_indicator = ""
-powershell_indicator = "_"
+fish_indicator = "󰈺"
+powershell_indicator = "󰨊"
 disabled = false
 
 [custom.remote-container]
