--- a/nix/applications/starship/starship.toml
+++ b/nix/applications/starship/starship.toml
@@ -1,62 +1,6 @@
-format = """
-$shell\
-$username\
-$hostname\
-$shlvl\
-$kubernetes\
-$directory\
-$vcsh\
-$git_branch\
-$git_commit\
-$git_state\
-$git_status\
-$hg_branch\
-$docker_context\
-$package\
-$cmake\
-$dart\
-$deno\
-$dotnet\
-$elixir\
-$elm\
-$erlang\
-$golang\
-$helm\
-$java\
-$julia\
-$kotlin\
-$nim\
-$nodejs\
-$ocaml\
-$perl\
-$php\
-$purescript\
-$python\
-$red\
-$ruby\
-$rust\
-$scala\
-$swift\
-$terraform\
-$vagrant\
-$zig\
-$nix_shell\
-$conda\
-$memory_usage\
-$aws\
-$gcloud\
-$openstack\
-$env_var\
-$crystal\
-$custom\
-$cmd_duration\
-$lua\
-$jobs\
-$battery\
-$time\
-$status\
-$line_break\
-$character"""
+"$schema" = "https://starship.rs/config-schema.json"
+
+format = "$shell$all$line_break$character"
 
 [shell]
 fish_indicator = "󰈺"
