feat: manage serengeti with terraform

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -12,3 +12,12 @@ creation_rules:
         - *kilimanjaro
         - *serengeti
         - *manyara
+  - path_regex: infra/[^/]+\.yaml$
+    key_groups:
+      - age:
+        - *admin
+  - path_regex: nix/systems/nixos/serengeti/secrets.yaml$
+    key_groups:
+      - age:
+        - *admin
+        - *serengeti
