feat: enable attic service

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -21,3 +21,8 @@ creation_rules:
       - age:
         - *admin
         - *serengeti
+  - path_regex: nix/systems/nixos/services/attic/secrets.yaml$
+    key_groups:
+      - age:
+        - *admin
+        - *serengeti
