ci: rename job name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: setup test
+name: build and cache
 
 on:
   pull_request:
@@ -36,7 +36,7 @@ jobs:
         run: |
           printf "run\tprivate/var/run\n" | sudo tee -a /etc/synthetic.conf
           /System/Library/Filesystems/apfs.fs/Contents/Resources/apfs.util -t || true
-      - name: setup
+      - name: build
         run: |
           export MAKEFLAGS="NIX:=nix"
           make
