feat: serve forgejo on manyara

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -22,6 +22,12 @@ creation_rules:
           - *admin
         age:
           - *manyara
+  - path_regex: nix/systems/nixos/services/forgejo/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *manyara
   - path_regex: nix/systems/nixos/serengeti/secrets.yaml$
     key_groups:
       - pgp:
