feat: enable gitea-actions-runner on kilimanjaro

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -28,6 +28,13 @@ creation_rules:
           - *admin
         age:
           - *manyara
+  - path_regex: nix/systems/nixos/services/gitea-actions-runner/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *kilimanjaro
+          - *serengeti
   - path_regex: nix/systems/nixos/serengeti/secrets.yaml$
     key_groups:
       - pgp:
