--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,10 +24,8 @@ jobs:
       # workaround for "No space left on device"
       # https://github.com/actions/runner-images/issues/709
       - name: Collect garbage
-        run: |
-          df -h
-          rm -rf "$AGENT_TOOLSDIRECTORY"
-          df -h
+        if: matrix.os == 'ubuntu-latest'
+        uses: jlumbroso/free-disk-space@v1.3.1
       - name: Create /run for darwin
         if: matrix.os == 'macos-14'
         run: |
