ci: use nix-community and cuda-maintainers caches

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,7 @@ jobs:
           name: natsukium
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
+          extraPullNames: nix-community,cuda-maintainers
       # workaround for "No space left on device"
       # https://github.com/actions/runner-images/issues/709
       - name: Collect garbage
