ci: use magic-nix-cache

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           printf "run\tprivate/var/run\n" | sudo tee -a /etc/synthetic.conf
           /System/Library/Filesystems/apfs.fs/Contents/Resources/apfs.util -t || true
+      - uses: DeterminateSystems/magic-nix-cache-action@v8
       - name: build
         run: |
           export MAKEFLAGS="NIX:=nix"
