feat(hydra): serve on kilimanjaro instead of manyara
Excessive use of network bandwidth.

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -21,7 +21,7 @@ creation_rules:
       - pgp:
           - *admin
         age:
-          - *manyara
+          - *kilimanjaro
   - path_regex: systems/nixos/services/forgejo/secrets.yaml$
     key_groups:
       - pgp:
