feat: serve calibre-web on manyara

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -22,6 +22,12 @@ creation_rules:
           - *admin
         age:
           - *kilimanjaro
+  - path_regex: systems/nixos/services/calibre-web/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *manyara
   - path_regex: systems/nixos/services/forgejo/secrets.yaml$
     key_groups:
       - pgp:
