feat: enable hercules-ci-agent

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -61,3 +61,11 @@ creation_rules:
           - *admin
         age:
           - *mikumi
+  - path_regex: systems/shared/hercules-ci/[^/]+\.(yaml|json)$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *kilimanjaro
+          - *mikumi
+          - *serengeti
