fix(container): add prefix to image tag

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -27,7 +27,7 @@ jobs:
         id: meta
         with:
           images: |
-            ${{ matrix.image }}
+            ghcr.io/natsukium/${{ matrix.image }}
       - uses: docker/build-push-action@v5
         with:
           push: ${{ github.event_name != 'pull_request' }}
