refactor: manage cachix-agent-token with sops-nix

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -55,3 +55,9 @@ creation_rules:
           - *admin
         age:
           - *serengeti
+  - path_regex: systems/darwin/mikumi/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *mikumi
