ci: remove a deprecated substituter

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           name: natsukium
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          extraPullNames: nix-community,cuda-maintainers
+          extraPullNames: nix-community
       # workaround for "No space left on device"
       # https://github.com/actions/runner-images/issues/709
       - name: Collect garbage
@@ -51,7 +51,7 @@ jobs:
           name: natsukium
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-          extraPullNames: nix-community,cuda-maintainers
+          extraPullNames: nix-community
       - name: deploy
         env:
           CACHIX_ACTIVATE_TOKEN: ${{ secrets.CACHIX_ACTIVATE_TOKEN }}
