feat(infra): manage dns with terraform

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -14,7 +14,7 @@ creation_rules:
           - *serengeti
           - *manyara
           - *mikumi
-  - path_regex: infra/[^/]+\.yaml$
+  - path_regex: infra/*
     key_groups:
       - pgp:
           - *admin
