ci(renovate): replace `config:recommended` with `config:best-practices`

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,7 +1,7 @@
 {
 	$schema: 'https://docs.renovatebot.com/renovate-schema.json',
 	extends: [
-		'config:recommended',
+		'config:best-practices',
 	],
 	timezone: 'Asia/Tokyo',
 	lockFileMaintenance: {
@@ -15,5 +15,4 @@
 	nix: {
 		enabled: true,
 	},
-	configMigration: true,
 }
