ci: add path filter for container

--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -3,9 +3,15 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - 'container/**'
+      - '.github/workflows/container.yaml'
   push:
     branches:
       - main
+    paths:
+      - 'container/**'
+      - '.github/workflows/container.yaml'
 jobs:
   build:
     runs-on: ubuntu-latest
