chore(email): read password from file

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -74,3 +74,17 @@ creation_rules:
           - *kilimanjaro
           - *mikumi
           - *serengeti
+  - path_regex: homes/shared/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *katavi-user
+          - *kilimanjaro-user
+          - *work-user
+  - path_regex: homes/darwin/work/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *work-user
