--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,9 +3,35 @@ on:
   pull_request:
     branches:
       - main
+    paths:
+      - '.github/actions/setup-nix/**'
+      - '.github/workflows/test.yml'
+      - 'applications/**'
+      - 'flake-module.nix'
+      - 'flake.lock'
+      - 'flake.nix'
+      - 'homes/**'
+      - 'lib/**'
+      - 'modules/**'
+      - 'overlays/**'
+      - 'pkgs/**'
+      - 'systems/**'
   push:
     branches:
       - main
+    paths:
+      - '.github/actions/setup-nix/**'
+      - '.github/workflows/test.yml'
+      - 'applications/**'
+      - 'flake-module.nix'
+      - 'flake.lock'
+      - 'flake.nix'
+      - 'homes/**'
+      - 'lib/**'
+      - 'modules/**'
+      - 'overlays/**'
+      - 'pkgs/**'
+      - 'systems/**'
 jobs:
   check:
     runs-on: ubuntu-latest
