fix(typos): add 'facter' to ignore list
Added 'facter' to the typos ignore list to suppress false positive errors
suggesting it should be 'factor' or 'faster'. This is a valid term in our
context and should not be flagged as a typo.

--- a/typos.toml
+++ b/typos.toml
@@ -3,4 +3,4 @@ extend-ignore-re = [
   "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
   "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
 ]
-extend-ignore-words-re = ["noice"]
+extend-ignore-words-re = ["noice", "facter"]
