ci: add tarangire to pr-dix-diff

--- a/.github/workflows/pr-dix-diff.yml
+++ b/.github/workflows/pr-dix-diff.yml
@@ -27,7 +27,7 @@ jobs:
             echo ''
 
             echo '## NixOS Configurations'
-            for host in kilimanjaro manyara serengeti arusha; do
+            for host in kilimanjaro manyara tarangire serengeti arusha; do
               echo "### $host"
               echo '```'
               dix \
