--- a/.github/workflows/pr-dix-diff.yml
+++ b/.github/workflows/pr-dix-diff.yml
@@ -10,6 +10,27 @@ permissions:
 jobs:
   dix:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          # NixOS hosts
+          - host: kilimanjaro
+            attribute: nixosConfigurations.kilimanjaro.config.system.build.toplevel
+          - host: manyara
+            attribute: nixosConfigurations.manyara.config.system.build.toplevel
+          - host: tarangire
+            attribute: nixosConfigurations.tarangire.config.system.build.toplevel
+          - host: serengeti
+            attribute: nixosConfigurations.serengeti.config.system.build.toplevel
+          - host: arusha
+            attribute: nixosConfigurations.arusha.config.system.build.toplevel
+          # Darwin hosts
+          - host: katavi
+            attribute: darwinConfigurations.katavi.system
+          - host: mikumi
+            attribute: darwinConfigurations.mikumi.system
+          - host: work
+            attribute: darwinConfigurations.work.system
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
       - uses: ./.github/actions/setup-nix
@@ -18,42 +39,40 @@ jobs:
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - name: Install dix
         run: nix profile install nixpkgs#dix
-      - name: Run dix for all hosts
+      - name: Run dix for ${{ matrix.host }}
         id: dix
         run: |
-          {
-            echo 'DIFF_OUTPUT<<EOF'
-            echo '# Configuration Diff'
-            echo ''
+          DIX_OUTPUT=$(dix \
+            "$(nix path-info --derivation "github:natsukium/dotfiles#${{ matrix.attribute }}")" \
+            "$(nix path-info --derivation ".#${{ matrix.attribute }}")" \
+            2>&1) || DIX_OUTPUT="Failed to generate diff"
 
-            echo '## NixOS Configurations'
-            for host in kilimanjaro manyara tarangire serengeti arusha; do
-              echo "### $host"
-              echo '```'
-              dix \
-                "$(nix path-info --derivation "github:natsukium/dotfiles#nixosConfigurations.$host.config.system.build.toplevel")" \
-                "$(nix path-info --derivation ".#nixosConfigurations.$host.config.system.build.toplevel")" \
-                || echo "Failed to generate diff"
-              echo '```'
-              echo ''
-            done
+          # Extract drv paths from <<< and >>> lines
+          OLD_DRV=$(echo "$DIX_OUTPUT" | grep '^<<<' | sed 's/^<<< //')
+          NEW_DRV=$(echo "$DIX_OUTPUT" | grep '^>>>' | sed 's/^>>> //')
 
-            echo '## Darwin Configurations'
-            for host in katavi mikumi work; do
-              echo "### $host"
-              echo '```'
-              dix \
-                "$(nix path-info --derivation "github:natsukium/dotfiles#darwinConfigurations.$host.system")" \
-                "$(nix path-info --derivation ".#darwinConfigurations.$host.system")" \
-                || echo "Failed to generate diff"
-              echo '```'
+          if [ "$OLD_DRV" = "$NEW_DRV" ] && [ -n "$OLD_DRV" ]; then
+            {
+              echo 'DIFF_OUTPUT<<EOF'
+              echo '# Configuration Diff for ${{ matrix.host }}'
               echo ''
-            done
-            echo 'EOF'
-          } >> "$GITHUB_OUTPUT"
+              echo 'No changes detected.'
+              echo 'EOF'
+            } >> "$GITHUB_OUTPUT"
+          else
+            {
+              echo 'DIFF_OUTPUT<<EOF'
+              echo '# Configuration Diff for ${{ matrix.host }}'
+              echo ''
+              echo '```'
+              echo "$DIX_OUTPUT"
+              echo '```'
+              echo 'EOF'
+            } >> "$GITHUB_OUTPUT"
+          fi
       - uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
         with:
-          header: dix
+          header: dix-${{ matrix.host }}
           hide_and_recreate: true
           hide_classify: "OUTDATED"
           message: ${{ steps.dix.outputs.DIFF_OUTPUT }}
