--- a/.github/workflows/pr-dix-diff.yml
+++ b/.github/workflows/pr-dix-diff.yml
@@ -4,6 +4,9 @@ on:
     types: [opened, synchronize, reopened]
     branches:
       - main
+concurrency:
+  group: dix-${{ github.event.pull_request.number }}
+  cancel-in-progress: true
 permissions:
   contents: read
   pull-requests: write
