--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -15,6 +15,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    timeout-minutes: 15
     permissions:
       contents: read
       packages: write
