chore(ci): skip pr-dix-diff workflow for container and infra changes
The pr-dix-diff workflow is specific to nix configuration changes.
Skipping container and infra directory changes reduces unnecessary CI runs
and speeds up feedback for unrelated infrastructure modifications.

--- a/.github/workflows/pr-dix-diff.yml
+++ b/.github/workflows/pr-dix-diff.yml
@@ -4,6 +4,9 @@ on:
     types: [opened, synchronize, reopened]
     branches:
       - main
+    paths-ignore:
+      - 'container/**'
+      - 'infra/**'
 concurrency:
   group: dix-${{ github.event.pull_request.number }}
   cancel-in-progress: true
