docs(overlays): migrate to literate configuration

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -4,3 +4,4 @@
 [type: org] configuration.org $lang:configuration.$lang.org opt:"-k 0"
 [type: org] applications/emacs/init.org $lang:applications/emacs/init.$lang.org opt:"-k 0"
 [type: org] applications/emacs/early-init.org $lang:applications/emacs/early-init.$lang.org opt:"-k 0"
+[type: org] overlays/configuration.org $lang:overlays/configuration.$lang.org opt:"-k 0"
