chore(renovate): use native Nix manager with grouped updates
Replace lockFileMaintenance with packageRules for granular control.
The Nix manager now treats all flake inputs as individual dependencies,
making lockFileMaintenance unnecessary.

- Group all nix inputs except edgepkgs into daily updates
- edgepkgs updates individually without schedule restriction

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -4,15 +4,18 @@
 		'config:best-practices',
 	],
 	timezone: 'Asia/Tokyo',
-	lockFileMaintenance: {
-		enabled: true,
-		schedule: [
-			'before 3:00am',
-		],
-	},
 	automerge: true,
 	automergeStrategy: 'rebase',
 	nix: {
 		enabled: true,
 	},
+	packageRules: [
+		{
+			// Group all nix inputs except edgepkgs, update once per day
+			matchManagers: ['nix'],
+			matchDepNames: ['!/^edgepkgs$/'],
+			groupName: 'nix flake inputs',
+			schedule: ['before 4:00am'],
+		},
+	],
 }
