--- a/.github/workflows/pr-dix-diff.yml
+++ b/.github/workflows/pr-dix-diff.yml
@@ -18,69 +18,28 @@ jobs:
   dix:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    strategy:
-      matrix:
-        include:
-          # NixOS hosts
-          - host: kilimanjaro
-            attribute: nixosConfigurations.kilimanjaro.config.system.build.toplevel
-          - host: manyara
-            attribute: nixosConfigurations.manyara.config.system.build.toplevel
-          - host: tarangire
-            attribute: nixosConfigurations.tarangire.config.system.build.toplevel
-          - host: serengeti
-            attribute: nixosConfigurations.serengeti.config.system.build.toplevel
-          - host: arusha
-            attribute: nixosConfigurations.arusha.config.system.build.toplevel
-          # Darwin hosts
-          - host: katavi
-            attribute: darwinConfigurations.katavi.system
-          - host: mikumi
-            attribute: darwinConfigurations.mikumi.system
-          - host: work
-            attribute: darwinConfigurations.work.system
     steps:
       - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
       - uses: ./.github/actions/setup-nix
         with:
           signingKey: ${{ secrets.CACHIX_SIGNING_KEY }}
           authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
-      - name: Install dix
-        run: nix profile install nixpkgs#dix
-      - name: Run dix for ${{ matrix.host }}
-        id: dix
-        run: |
-          DIX_OUTPUT=$(dix \
-            "$(nix path-info --derivation "github:natsukium/dotfiles#${{ matrix.attribute }}")" \
-            "$(nix path-info --derivation ".#${{ matrix.attribute }}")" \
-            2>&1) || DIX_OUTPUT="Failed to generate diff"
-
-          # Extract drv paths from <<< and >>> lines
-          OLD_DRV=$(echo "$DIX_OUTPUT" | grep '^<<<' | sed 's/^<<< //')
-          NEW_DRV=$(echo "$DIX_OUTPUT" | grep '^>>>' | sed 's/^>>> //')
-
-          if [ "$OLD_DRV" = "$NEW_DRV" ] && [ -n "$OLD_DRV" ]; then
-            {
-              echo 'DIFF_OUTPUT<<EOF'
-              echo '# Configuration Diff for ${{ matrix.host }}'
-              echo ''
-              echo 'No changes detected.'
-              echo 'EOF'
-            } >> "$GITHUB_OUTPUT"
-          else
-            {
-              echo 'DIFF_OUTPUT<<EOF'
-              echo '# Configuration Diff for ${{ matrix.host }}'
-              echo ''
-              echo '```'
-              echo "$DIX_OUTPUT"
-              echo '```'
-              echo 'EOF'
-            } >> "$GITHUB_OUTPUT"
-          fi
-      - uses: marocchino/sticky-pull-request-comment@773744901bac0e8cbb5a0dc842800d45e9b2b405 # v2.9.4
+      - uses: natsukium/nix-diff-action@88dda3e67a3eca1b77a9c37d9b1670dc3578b473 # v1.0.0
         with:
-          header: dix-${{ matrix.host }}
-          hide_and_recreate: true
-          hide_classify: "OUTDATED"
-          message: ${{ steps.dix.outputs.DIFF_OUTPUT }}
+          attributes: |
+            - displayName: kilimanjaro
+              attribute: nixosConfigurations.kilimanjaro.config.system.build.toplevel
+            - displayName: manyara
+              attribute: nixosConfigurations.manyara.config.system.build.toplevel
+            - displayName: tarangire
+              attribute: nixosConfigurations.tarangire.config.system.build.toplevel
+            - displayName: serengeti
+              attribute: nixosConfigurations.serengeti.config.system.build.toplevel
+            - displayName: arusha
+              attribute: nixosConfigurations.arusha.config.system.build.toplevel
+            - displayName: katavi
+              attribute: darwinConfigurations.katavi.system
+            - displayName: mikumi
+              attribute: darwinConfigurations.mikumi.system
+            - displayName: work
+              attribute: darwinConfigurations.work.system
