docs: fix translate

--- a/po4a.cfg
+++ b/po4a.cfg
@@ -5,3 +5,4 @@
 [type: org] applications/emacs/init.org $lang:applications/emacs/init.$lang.org opt:"-k 0"
 [type: org] applications/emacs/early-init.org $lang:applications/emacs/early-init.$lang.org opt:"-k 0"
 [type: org] overlays/configuration.org $lang:overlays/configuration.$lang.org opt:"-k 0"
+[type: org] modules/configuration.org $lang:modules/configuration.$lang.org opt:"-k 0"
