chore(renovate): batch docker image updates on weekly schedule
Docker image digests update frequently, creating noise in dependency updates.
Batching them into a weekly schedule reduces churn while keeping images reasonably current.

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -15,4 +15,11 @@
 	nix: {
 		enabled: true,
 	},
+	packageRules: [
+		{
+			matchDatasources: ['docker'],
+			groupName: 'docker images',
+			extends: ['schedule:weekly'],
+		},
+	],
 }
