--- a/.github/workflows/update-edgepkgs.yml
+++ b/.github/workflows/update-edgepkgs.yml
@@ -41,6 +41,6 @@ jobs:
       - name: Enable auto-merge
         if: steps.create-pr.outputs.pull-request-number
         run: |
-          gh pr merge --auto --merge "${{ steps.create-pr.outputs.pull-request-number }}"
+          gh pr merge --auto --squash "${{ steps.create-pr.outputs.pull-request-number }}"
         env:
           GH_TOKEN: ${{ steps.app-token.outputs.token }}
