feat(grafana): add secret key management via SOPS
Grafana requires a secret key for encrypting sensitive data like API tokens
and session information. By managing this through SOPS with age encryption,
the secret is stored encrypted at rest and integrated with the existing
infrastructure security model.

--- a/.sops.yaml
+++ b/.sops.yaml
@@ -43,6 +43,12 @@ creation_rules:
           - *admin
         age:
           - *manyara
+  - path_regex: systems/nixos/services/grafana/secrets.yaml$
+    key_groups:
+      - pgp:
+          - *admin
+        age:
+          - *manyara
   - path_regex: systems/nixos/services/gitea-actions-runner/secrets.yaml$
     key_groups:
       - pgp:
