refactor(ci): implement conditional workflow execution with paths-filter
Replace inline path filters on pull_request events with a dedicated changes job
using dorny/paths-filter. This reduces unnecessary CI runs when only unrelated
files change, while ensuring all checks run on push to main.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,19 +3,6 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - '.github/actions/setup-nix/**'
-      - '.github/workflows/test.yml'
-      - 'applications/**'
-      - 'flake-module.nix'
-      - 'flake.lock'
-      - 'flake.nix'
-      - 'homes/**'
-      - 'lib/**'
-      - 'modules/**'
-      - 'overlays/**'
-      - 'pkgs/**'
-      - 'systems/**'
   push:
     branches:
       - main
@@ -33,7 +20,36 @@ on:
       - 'pkgs/**'
       - 'systems/**'
 jobs:
+  changes:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      pull-requests: read
+    outputs:
+      nix: ${{ steps.filter.outputs.nix }}
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: filter
+        with:
+          filters: |
+            nix:
+              - '.github/actions/setup-nix/**'
+              - '.github/workflows/test.yml'
+              - 'applications/**'
+              - 'flake-module.nix'
+              - 'flake.lock'
+              - 'flake.nix'
+              - 'homes/**'
+              - 'lib/**'
+              - 'modules/**'
+              - 'overlays/**'
+              - 'pkgs/**'
+              - 'systems/**'
   check:
+    needs: changes
+    if: ${{ !cancelled() && (needs.changes.outputs.nix == 'true' || github.event_name == 'push') }}
     runs-on: ubuntu-latest
     timeout-minutes: 10
     steps:
@@ -45,7 +61,8 @@ jobs:
       - name: Check flake
         run: nix flake check --no-build --all-systems --keep-going
   build:
-    needs: check
+    needs: [changes, check]
+    if: ${{ !cancelled() && needs.check.result == 'success' }}
     runs-on: ${{ matrix.os }}
     timeout-minutes: 120
     strategy:
