--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -3,9 +3,6 @@ on:
   pull_request:
     branches:
       - main
-    paths:
-      - 'container/**'
-      - '.github/workflows/container.yaml'
   push:
     branches:
       - main
@@ -13,7 +10,26 @@ on:
       - 'container/**'
       - '.github/workflows/container.yaml'
 jobs:
+  changes:
+    if: github.event_name == 'pull_request'
+    runs-on: ubuntu-latest
+    timeout-minutes: 5
+    permissions:
+      pull-requests: read
+    outputs:
+      container: ${{ steps.filter.outputs.container }}
+    steps:
+      - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+      - uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36 # v3.0.2
+        id: filter
+        with:
+          filters: |
+            container:
+              - 'container/**'
+              - '.github/workflows/container.yaml'
   build:
+    needs: changes
+    if: ${{ !cancelled() && (needs.changes.outputs.container == 'true' || github.event_name == 'push') }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
