--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -29,7 +29,7 @@ jobs:
               - '.github/workflows/container.yaml'
   build:
     needs: changes
-    if: ${{ !cancelled() && (needs.changes.outputs.container == 'true' || github.event_name == 'push') }}
+    if: ${{ !cancelled() }}
     runs-on: ubuntu-latest
     timeout-minutes: 15
     permissions:
@@ -40,18 +40,21 @@ jobs:
         image: [base, nodejs, python, rust]
     steps:
       - uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
+        if: needs.changes.outputs.container == 'true' || github.event_name == 'push'
       - uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef # v3.6.0
-        if: github.event_name != 'pull_request'
+        if: (needs.changes.outputs.container == 'true' || github.event_name == 'push') && github.event_name != 'pull_request'
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       - uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5.10.0
+        if: needs.changes.outputs.container == 'true' || github.event_name == 'push'
         id: meta
         with:
           images: |
             ghcr.io/natsukium/${{ matrix.image }}
       - uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83 # v6.18.0
+        if: needs.changes.outputs.container == 'true' || github.event_name == 'push'
         with:
           push: ${{ github.event_name != 'pull_request' }}
           context: container
